Create burger menu

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,24 @@
           <button class="header__btn">
             <img src="./images/icon_menu.svg" alt="icon menu" />
           </button>
+          <div class="rightside-menu">
+            <button class="rightside-menu__close rightside-menu--close">
+              <img src="./images/close.svg" alt="Close">
+            </button>
+            <div class="rightside-menu__content">
+              <a class="rightside-menu__logo" href="#">
+                <img src="./images/logo-big.png" alt="Logo">
+              </a>
+              <h4 class="rightside-menu__title">
+                Furniture for life
+              </h4>
+              <p class="rightside-menu__text">
+                Sustainable hot chicken skateboard, dreamcatcher meggings actually squid. Slow-carb everyday carry +1
+                art party microdosing, put a bird on it brooklyn
+              </p>
+              <img class="rightside-menu-images" src="./images/rightside-img.jpg" alt="Images">
+            </div>
+          </div>
         </div>
       </div>
     </header>
