Master feat (add first main page)

--- a/app/index.html
+++ b/app/index.html
@@ -58,13 +58,266 @@
                 Sustainable hot chicken skateboard, dreamcatcher meggings actually squid. Slow-carb everyday carry +1
                 art party microdosing, put a bird on it brooklyn
               </p>
-              <img class="rightside-menu-images" src="./images/rightside-img.jpg" alt="Images">
+              <img class="rightside-menu-images" src="./images/content/rightside-img.jpg" alt="Images">
             </div>
           </div>
         </div>
       </div>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <section class="top">
+        <div class="top__inner">
+          <div class="top__slider">
+            <div class="top__slider-item">
+              <img class="top__slider-img" src="./images/content/slider.png" alt="Slider">
+              <div class="top__slider-info">
+                <h2 class="top__slider-title">Furniture collection</h2>
+                <p class="top__slider-text">Deep v you probably haven't heard of them banh mi synth actually affogato.
+                  Aesthetic lyft ethical drinking vinegar austint</p>
+              </div>
+            </div>
+            <div class="top__slider-item">
+              <img class="top__slider-img" src="./images/content/slider.png" alt="Slider">
+              <div class="top__slider-info">
+                <h2 class="top__slider-title">Furniture collection</h2>
+                <p class="top__slider-text">Deep v you probably haven't heard of them banh mi synth actually affogato.
+                  Aesthetic lyft ethical drinking vinegar austint</p>
+              </div>
+            </div>
+            <div class="top__slider-item">
+              <img class="top__slider-img" src="./images/content/slider.png" alt="Slider">
+              <div class="top__slider-info">
+                <h2 class="top__slider-title">Furniture collection</h2>
+                <p class="top__slider-text">Deep v you probably haven't heard of them banh mi synth actually affogato.
+                  Aesthetic lyft ethical drinking vinegar austint</p>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
+      <section class="new-collection">
+        <div class="container-fluid">
+          <h3 class="new-collection__title">Furniture new collection</h3>
+          <p class="new-collection__text">
+            Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking
+            vinegar austint
+          </p>
+          <div class="collection">
+            <a class="collection__item" href="#">
+              <img class="collection__images" src="./images/content/collection-1.jpg" alt="collection-1">
+              <div class="collection__info">
+                <h6 class="collection__info-title">Truffaut literally trust</h6>
+                <p class="collection__info-text">Living room furntiture | Chair</p>
+              </div>
+            </a>
+            <a class="collection__item" href="#">
+              <img class="collection__images" src="./images/content/collection-2.jpg" alt="collection-2">
+              <div class="collection__info">
+                <h6 class="collection__info-title">Truffaut literally trust</h6>
+                <p class="collection__info-text">Living room furntiture | Chair</p>
+              </div>
+            </a>
+            <a class="collection__item" href="#">
+              <img class="collection__images" src="./images/content/collection-3.jpg" alt="collection-3">
+              <div class="collection__info">
+                <h6 class="collection__info-title">Truffaut literally trust</h6>
+                <p class="collection__info-text">Living room furntiture | Chair</p>
+              </div>
+            </a>
+            <a class="collection__item" href="#">
+              <img class="collection__images" src="./images/content/collection-4.jpg" alt="collection-4">
+              <div class="collection__info">
+                <h6 class="collection__info-title">Truffaut literally trust</h6>
+                <p class="collection__info-text">Living room furntiture | Chair</p>
+              </div>
+            </a>
+            <a class="collection__item" href="#">
+              <img class="collection__images" src="./images/content/collection-5.jpg" alt="collection-5">
+              <div class="collection__info">
+                <h6 class="collection__info-title">Truffaut literally trust</h6>
+                <p class="collection__info-text">Living room furntiture | Chair</p>
+              </div>
+            </a>
+
+          </div>
+        </div>
+      </section>
+      <section class="decor">
+        <div class="container">
+          <h2 class="decor__title">
+            Aesthetic ethical drinking
+          </h2>
+          <p class="decor__text">
+            Deep v you probably haven't heard of them banh mi synth actually affogato. Artlyft ethical the one drinking
+            vinegar austint
+          </p>
+        </div>
+      </section>
+      <section class="works-path">
+        <div class="container">
+          <h3 class="works-path__title">How it works</h3>
+          <div class="works-path__items">
+            <div class="works-path__items-box">
+              <div class="works-path__item works-path__item--consultation">
+                <img class="works-path__item-img" src="./images/graphic-tool.svg" alt="icon">
+                <h6 class="works-path__item-title">Designer Consultation</h6>
+                <p class="works-path__item-text">Kinfolk scenester authentic craft beer truffaut irony intelligentsia
+                  YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche</p>
+              </div>
+              <div class="works-path__item works-path__item--production">
+                <img class="works-path__item-img" src="./images/sofa.svg" alt="icon">
+                <h6 class="works-path__item-title">Production</h6>
+                <p class="works-path__item-text">Everyday carry actually neutra authentic kogi shabby chic</p>
+              </div>
+            </div>
+            <div class="works-path__item works-path__item--measuring">
+              <img class="works-path__item-img" src="./images/measuring-tape.svg" alt="icon">
+              <h6 class="works-path__item-title">Measurements</h6>
+              <p class="works-path__item-text">Intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo
+                viral cliche</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="gallery">
+        <div class="container-fluid">
+          <div class="gallery__buttons">
+            <button class="gallery__btn" data-filter=".bedroom">Bedroom furniture</button>
+            <button class="gallery__btn" data-filter=".living">Living room furniture</button>
+            <button class="gallery__btn" data-filter=".office">Office furniture</button>
+            <button class="gallery__btn" data-filter=".dindig">Dining room futniture</button>
+            <button class="gallery__btn" data-filter=".chair">Chair</button>
+          </div>
+          <div class="gallery__inner">
+            <div class="gallery__items mix bedroom">
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-1.jpg" alt="images">
+              </a>
+
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-2.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-3.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-4.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-5.jpg" alt="images">
+              </a>
+            </div>
+            <div class="gallery__items mix living">
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-1.jpg" alt="images">
+              </a>
+
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-2.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-3.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-4.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-5.jpg" alt="images">
+              </a>
+            </div>
+            <div class="gallery__items mix office">
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-1.jpg" alt="images">
+              </a>
+
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-2.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-3.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-4.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-5.jpg" alt="images">
+              </a>
+            </div>
+            <div class="gallery__items mix dindig">
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-1.jpg" alt="images">
+              </a>
+
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-2.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-3.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-4.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-5.jpg" alt="images">
+              </a>
+            </div>
+            <div class="gallery__items mix chair">
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-1.jpg" alt="images">
+              </a>
+
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-2.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-3.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-4.jpg" alt="images">
+              </a>
+              <a class="gallery__item" href="#">
+                <img src="./images/gallery/gallery-5.jpg" alt="images">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <section class="blog-box">
+        <div class="container">
+          <h3 class="blog-box__title">More inspiration ideas in our blog</h3>
+          <div class="blog-box__items">
+            <div class="blog-box__item">
+              <a class="blog-box__img-link" href="#">
+                <img class="blog-box__img" src="./images/blog/blog-1.jpg" alt="blog-img">
+              </a>
+              <div class="blog-box__links">
+                <span class="blog-box__date">March 12, 2020</span> |
+                <a class="blog-box__author" href="#">by Ann Summers</a> |
+                <a class="blog-box__theme" href="#">Inrerior </a>
+              </div>
+              <a class="blog-box__item-titlelink" href="#">
+                <h4 class="blog-box__item-title">Listicle actually selvage activated charcoal for the drinking vinegar
+                </h4>
+              </a>
+            </div>
+            <div class="blog-box__item">
+              <a class="blog-box__img-link" href="#">
+                <img class="blog-box__img" src="./images/blog/blog-2.jpg" alt="blog-img">
+              </a>
+              <div class="blog-box__links">
+                <span class="blog-box__date">September 28,2020</span> |
+                <a class="blog-box__author" href="#">by Finnagan Morningstar</a> |
+                <a class="blog-box__theme" href="#">Dining room interior</a>
+              </div>
+              <a class="blog-box__item-titlelink" href="#">
+                <h4 class="blog-box__item-title">Red selfies edison bulb four dollar toast humblebrag</h4>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer class="footer">
       <div class="footer__content">
         <div class="container">
