--- a/app/gallery.html
+++ b/app/gallery.html
@@ -19,24 +19,24 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">About</a>
+                <a class="menu__list-link" href="./about.html">About</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link menu__list-link--active" href="#">Gallery</a>
+                <a class="menu__list-link menu__list-link--active" href="./gallery.html">Gallery</a>
               </li>
             </ul>
           </nav>
-          <a href="#" class="logo">
+          <a href="./index.html" class="logo">
             <img src="./images/logo.png" alt="Logo" />
           </a>
 
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Blog</a>
+                <a class="menu__list-link" href="./blog.html">Blog</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Contact</a>
+                <a class="menu__list-link" href="./contact.html">Contact</a>
               </li>
             </ul>
           </nav>
@@ -69,10 +69,10 @@
         <div class="container">
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">Home</a>
+              <a class="breadcrumbs__link" href="./index.html">Home</a>
             </li>
             <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">About</a>
+              <a class="breadcrumbs__link" href="./gallery.html">Gallery</a>
             </li>
           </ul>
         </div>
