Master fix (gallery  page)

--- a/app/gallery.html
+++ b/app/gallery.html
@@ -48,7 +48,7 @@
               <img src="./images/close.svg" alt="Close">
             </button>
             <div class="rightside-menu__content">
-              <a class="rightside-menu__logo" href="#">
+              <a class="rightside-menu__logo" href="./index.html">
                 <img src="./images/logo-big.png" alt="Logo">
               </a>
               <h4 class="rightside-menu__title">
@@ -270,7 +270,7 @@
                 Keffiyeh poutine etsy, paleo cray put a bird on it microdosing
                 schlitz you probably occupy
               </p>
-              <a class="footer__info-email" href="mailto:desire@email.com">desire@email.com</a>
+              <a class="info-email" href="mailto:desire@email.com">desire@email.com</a>
               <form class="footer__form">
                 <input class="footer__form-input" type="email" placeholder="Subscribe by email" />
                 <button class="footer__form-button" type="submit">
