Master feat (add links for pages)

--- a/app/index.html
+++ b/app/index.html
@@ -19,24 +19,24 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">About</a>
+                <a class="menu__list-link" href="./about.html">About</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Gallery</a>
+                <a class="menu__list-link" href="./gallery.html">Gallery</a>
               </li>
             </ul>
           </nav>
-          <a href="#" class="logo">
+          <a href="./index.html" class="logo">
             <img src="./images/logo.png" alt="Logo" />
           </a>
 
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Blog</a>
+                <a class="menu__list-link" href="./blog.html">Blog</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Contact</a>
+                <a class="menu__list-link" href="./contact.html">Contact</a>
               </li>
             </ul>
           </nav>
@@ -48,7 +48,7 @@
               <img src="./images/close.svg" alt="Close">
             </button>
             <div class="rightside-menu__content">
-              <a class="rightside-menu__logo" href="#">
+              <a class="rightside-menu__logo" href="./index.html">
                 <img src="./images/logo-big.png" alt="Logo">
               </a>
               <h4 class="rightside-menu__title">
@@ -328,7 +328,7 @@
                 Keffiyeh poutine etsy, paleo cray put a bird on it microdosing
                 schlitz you probably occupy
               </p>
-              <a class="footer__info-email" href="mailto:desire@email.com">desire@email.com</a>
+              <a class="info-email" href="mailto:desire@email.com">desire@email.com</a>
               <form class="footer__form">
                 <input class="footer__form-input" type="email" placeholder="Subscribe by email" />
                 <button class="footer__form-button" type="submit">
