Master feat (Add burger)

--- a/app/about.html
+++ b/app/about.html
@@ -29,7 +29,6 @@
           <a href="./index.html" class="logo">
             <img src="./images/logo.png" alt="Logo" />
           </a>
-
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
@@ -40,6 +39,11 @@
               </li>
             </ul>
           </nav>
+          <button class="header__btn-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
           <button class="header__btn">
             <img src="./images/icon_menu.svg" alt="icon menu" />
           </button>
