Master feat (Add burger and add span tags)

--- a/app/blog-one.html
+++ b/app/blog-one.html
@@ -40,6 +40,11 @@
               </li>
             </ul>
           </nav>
+          <button class="header__btn-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
           <button class="header__btn">
             <img src="./images/icon_menu.svg" alt="icon menu" />
           </button>
@@ -102,8 +107,8 @@
                       cliche. Tousled yr williamsburg austin edison bulb cloud bread vegan street art. Locavore food
                       truck trust fund palo santo asymmetrical, franzen deep v marfa kogi whatever swag pop-up seitan.
                     </p>
-                    <blockquote>“Simplicity is not the goal. It is the by-product of a good idea and modest
-                      expectations”
+                    <blockquote><span>“Simplicity is not the goal. It is the by-product of a good idea and modest
+                      expectations”</span>
                       <div class="blog__blockquote-author">
                         <p>
                           Paul Rand
@@ -128,10 +133,10 @@
                   </div>
                   <div class="blog-one__links">
                     <a href="#" class=" blog-one__link blog-one__link-prev">
-                      Cred selfies edison bulb four dollar toast humblebrag
+                      <span>Cred selfies edison bulb four dollar toast humblebrag</span>
                     </a>
                     <a href="#" class="blog-one__link blog-one__link-next">
-                      Semiotics fixie four dollar toast, next level
+                      <span>Semiotics fixie four dollar toast, next level</span>
                     </a>
 
                   </div>
@@ -193,7 +198,7 @@
                     <a href="#" class="blog__category-link">Bedroom Furniture (1)</a>
                   </li>
                 </ul>
-              </div>
+              </div> 
               <div class="recent-posts">
                 <h6 class="recent-posts__title">Recent Posts</h6>
                 <ul class="recent-posts__list">
