Master feat (Add burger menu)

--- a/app/blog.html
+++ b/app/blog.html
@@ -41,6 +41,11 @@
               </li>
             </ul>
           </nav>
+          <button class="header__btn-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
           <button class="header__btn">
             <img src="./images/icon_menu.svg" alt="icon menu" />
           </button>
@@ -57,7 +62,7 @@
                 Sustainable hot chicken skateboard, dreamcatcher meggings
                 actually squid. Slow-carb everyday carry +1 art party
                 microdosing, put a bird on it brooklyn
-              </p>
+              </p> 
               <img class="rightside-menu-images" src="./images/content/rightside-img.jpg" alt="Images" />
             </div>
           </div>
