--- a/app/contact.html
+++ b/app/contact.html
@@ -40,6 +40,11 @@
               </li>
             </ul>
           </nav>
+          <button class="header__btn-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
           <button class="header__btn">
             <img src="./images/icon_menu.svg" alt="icon menu" />
           </button>
@@ -80,7 +85,7 @@
       <div class="map">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d36606.42370189998!2d-122.43335957249965!3d37.79676698080304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580f18d8c6ea7%3A0x5d7f53fb70a3a903!2zNzI1IEdyZWVuIFN0LCBTYW4gRnJhbmNpc2NvLCBDQSA5NDEzMywg0KHQv9C-0LvRg9GH0LXQvdGWINCo0YLQsNGC0Lgg0JDQvNC10YDQuNC60Lg!5e0!3m2!1suk!2sua!4v1639049525646!5m2!1suk!2sua"
-          width="100%" height="578" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          width="100%"  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
       <section class="contact">
         <div class="container">
@@ -201,8 +206,7 @@
           <a href="#" class="contact-slider__link">
             <img src="./images/slider/slider-1.jpg" alt="images" class="contact-slider__img">
             <p class="contact-slider__title">Truffaut literally trust</p>
-          </a>
-
+          </a> 
           <a href="#" class="contact-slider__link">
             <img src="./images/slider/slider-1.jpg" alt="images" class="contact-slider__img">
             <p class="contact-slider__title">Truffaut literally trust</p>
