Master feat (Add burger menu)

--- a/app/gallery.html
+++ b/app/gallery.html
@@ -40,6 +40,11 @@
               </li>
             </ul>
           </nav>
+          <button class="header__btn-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
           <button class="header__btn">
             <img src="./images/icon_menu.svg" alt="icon menu" />
           </button>
@@ -75,7 +80,7 @@
               <a class="breadcrumbs__link" href="./gallery.html">Gallery</a>
             </li>
           </ul>
-        </div>
+        </div> 
       </div>
       <div class="gallery gallery-page">
         <div class="container-fluid">
