Master feat (Add burger menu)

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,11 @@
               </li>
             </ul>
           </nav>
+          <button class="header__btn-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
           <button class="header__btn">
             <img src="./images/icon_menu.svg" alt="icon menu" />
           </button>
